@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.31 2005/01/09 08:25:16 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.32 2005/01/10 08:29:41 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  10 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Fixed partition() in x86Template so that it scans through logicals and deletes
+  before deleting containing extended partition.
 
   08 Jan 2005; Preston Cody <codeman@gentoo.org>
   Added mount_network_shares. not able to test it from this computer.  
